--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             </div>
 
             <div class="team-member">
-              <img src="images/member4.png" alt="Team Member 4" />
+              <img src="ganraj.jpg" alt="Team Member 4" />
               <h3>Ganraj Kendre</h3>
               <!-- <p>[Role, e.g., UI/UX Designer]</p> -->
               <div class="social-links">
